User playlist page css fixed. Aligned contents

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -26,7 +26,7 @@ table.rightAlignTD:first-child td {
 .buttonContainer {
   border-radius: 20px;
   font-size: 18px;
-  width: 100%;
+  width: fit-content;
   font-family: "Fredoka One";
   letter-spacing: 2px;
 }
